# OperatingSystem

./: .gitignore  CMakeLists.txt  README.md  main.cpp  movingcar.cpp  movingcar.h  movingcar.ui  resources.qrc
